<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_base"
        android:checkableBehavior="single">

        <item
            android:id="@+id/action_notifications"
            android:title="@string/menu_notifications"
            android:checkable="true"/>
        <item
            android:id="@+id/action_explore"
            android:title="@string/menu_explore"
            android:checkable="true"/>
        <item
            android:id="@+id/action_sign_out"
            android:title="@string/menu_sign_out"
            android:checkable="true"/>
    </group>

    <group
        android:id="@+id/group_info"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_news"
            android:title="@string/menu_news"
            android:checkable="true"/>
        <item
            android:id="@+id/action_issues"
            android:title="@string/menu_issues"
            android:checkable="true"/>
        <item
            android:id="@+id/action_events"
            android:title="@string/menu_events"
            android:checkable="true"/>
        <item
            android:id="@+id/action_repositories"
            android:title="@string/menu_repositories"
            android:checkable="true"/>
    </group>
    <group
        android:id="@+id/group_other"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_setting"
            android:title="@string/menu_setting"
            android:checkable="true"/>
    </group>
    <group
        android:id="@+id/group_author"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_author"
            android:title="@string/menu_author"
            android:checkable="true"/>
    </group>
</menu>