<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_base"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_explore"
            android:title="@string/menu_explore"
            android:icon="@drawable/octicon_telescope"
            android:checkable="true"/>
        <item
            android:id="@+id/action_sign_in"
            android:title="@string/menu_sign_in"
            android:icon="@drawable/octicon_sign_in"
            android:checkable="true"/>
    </group>
    <group
        android:id="@+id/group_other"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_setting"
            android:title="@string/menu_setting"
            android:checkable="true"/>
    </group>
    <group
        android:id="@+id/group_author"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_author"
            android:title="@string/menu_author"
            android:checkable="true"/>
    </group>
</menu>